2014-01-08  Richard Sandiford  <rdsandiford@googlemail.com>

	PR rtl-optimization/59137
	* gcc.target/mips/pr59137.c: New test.

2014-01-08  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/asm-1.c (dg-options): Remove -m32.
	* gcc.target/i386/incoming-5.c (dg-options): Ditto.
	* gcc.target/i386/pr55433.c (dg-options): Ditto.
	* gcc.target/i386/pr57848.c (dg-options): Ditto.
	* gcc.target/i386/pr59099.c (dg-options): Ditto.
	Require fpic effective target.
	* gcc.target/i386/pr56246.c (dg-do): Compile for fpic target only.

2014-01-08  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/59722
	* gcc.dg/pr59722.c: New test.

2014-01-08  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR middle-end/57748
	* gcc.dg/torture/pr57748-3.c: New test.
	* gcc.dg/torture/pr57748-4.c: New test.

2014-01-08  Marek Polacek  <polacek@redhat.com>

	PR middle-end/59669
	* gcc.dg/gomp/pr59669-1.c: New test.
	* gcc.dg/gomp/pr59669-2.c: New test.

2014-01-08  Martin Jambor  <mjambor@suse.cz>

	PR ipa/59610
	* gcc.dg/ipa/pr59610.c: New test.

2014-01-08  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58182
	* gfortran.dg/binding_label_tests_26a.f90: New.
	* gfortran.dg/binding_label_tests_26b.f90: New.

2014-01-08  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/59667
	* c-c++-common/ubsan/pr59667.c: New test.

2014-01-08  Richard Biener  <rguenther@suse.de>

	PR middle-end/59630
	* gcc.dg/pr59630.c: New testcase.

2014-01-08  Richard Biener  <rguenther@suse.de>

	PR middle-end/59471
	* gcc.dg/pr59471.c: New testcase.

2014-01-07  Jeff Law  <law@redhat.com>

	PR middle-end/53623
	* gcc.target/i386/pr53623.c: New test.

2014-01-07  Adam Butcher  <adam@jessamine.co.uk>

	* g++.dg/cpp1y/pr58500.C: Hoist PR reference to first line and remove
	blanks at EOF.
	* g++.dg/cpp1y/pr58534.C: Likewise.
	* g++.dg/cpp1y/pr58536.C: Likewise.
	* g++.dg/cpp1y/pr58548.C: Likewise.
	* g++.dg/cpp1y/pr58549.C: Likewise.
	* g++.dg/cpp1y/pr58637.C: Likewise.
	* g++.dg/cpp1y/pr59112.C: Likewise.